# pyrat

./: .pre-commit-config.yaml  README.md  config.ini  main.py  parametres.txt  pyproject.toml  pyrat.py
AIs/: Fonctions.py  Moi.py  Random.py
bots/: ariane.py  ariane_with_sense_of_smell.py  bot.py.example  my_bot.py  random.py  random_neighbor.py  utils.py
imports/: display.py  dummyplayer.py  maze.py  parameters.py
levels/: level_01.ini  level_02.ini  level_03.ini  level_04.ini  level_05.ini  level_06.ini  level_07.ini
pyrat/: pyrat.py
pyrat/core/: bot_utils.py  display.py  maze.py  parameters.py  spritesheet.py
