[project]
name = "pyrat"
version = "0.1.0"
description = "PyRat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configargparse>=1.7.1",
    "numpy>=2.3.3",
    "pygame>=2.6.1",
]
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

[project.scripts]
pyrat = "pyrat.pyrat:main"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "W", "B", "S", "ERA", "A", "C4", "ICN", "LOG", "Q", "RET", "SIM", "TID", "ARG", "PTH", "PD", "N", "PLE", "PLW", "UP", "RUF", "FURB"]
extend-ignore = ["S603", "N802", "PD901", "S311"]


[tool.ruff.lint.per-file-ignores]
"bots/*" = ["ARG001"]
